css/styles.css
body, html {
    padding: 0;
    margin: auto;
    font-family: Arial, Verdana, sans-serif;
    height: 100%;
    width: 100%;
}

header {
    text-align: center;
}

footer {
    text-align: center;
    font-style: normal;
    width: 70%;
    margin: auto;    
    border-top: 3px solid green;
    padding: 5px 0;
}

h1{
    font-family: Bookman, sans-serif;
    font-size: 36pt;
    font-weight: bold;
    margin-bottom: 0;
    margin-top: 10px;
}

h2{
    color: green;
    font-size: 2em;
}

a {
    color: #7A7C80;
    text-decoration: none;
}

ul {
    display: inline-block;
    font-size: 1.2rem;
    list-style-type: none;
}

li {
  margin: 15px 0;
}

ul li {
  padding-left: 2rem;
  background-image: url(../images/spoon.png);
  background-position: 0 0;
  background-size: 1.6rem 1.6rem;
  background-repeat: no-repeat;
}

ul a:hover {
  background-color: #eee;
  color: green;
  transition: 0.3s;
}

#topline {
    padding-bottom: 20px;
    min-height: 165px;
}

#topline h1 {
    font-family: 'Red Hat Text', sans-serif;
}

#topline a:hover {
  color: green;
  transition: 0.3s;
}

.sub-title {
    font-family: 'Courgette', cursive;
    font-size: 1.2rem;
}

#about {
  width: 70%;
  margin: auto;
  display: grid;
  grid-template-columns: 50% 50%;
  padding: 2rem 0;
  grid-gap: 1.5rem;
  color: #7A7C80;
  text-align: left;
  font-size: 14pt;
  align-items: center;
  border-bottom: 3px solid green;
}

#about img {
  width: 95%;
  height: 350px;
  filter: sepia(50%);
  object-fit: cover;
}

.quote-block {
    font-size: 32pt;
}

#contact {
    width: 70%;
    margin: auto; 
    color: #7A7C80;
    text-align: left;
    font-size: 14pt;
    height: auto;
    padding-bottom: 7.5%;
}

#contact img {
  float: right;
  margin-left: 50px;
  width: 40%;
  height: 200px;
  filter: sepia(50%);
  object-fit: cover;
}

#testimonials {
    width: 70%;
    margin: auto;
    color: #7A7C80;
    text-align: left;
    font-size: 14pt;
    height: auto;
    padding: 20px 0;
    border-top: 3px solid green;
}

#testimonials p {
    margin: 2rem 1rem;
    line-height: 1.4em;
}

#farm-testimonials {
    width: 70%;
    margin: auto; 
    color: #7A7C80;
    text-align: left;
    font-size: 14pt;
    height: auto;
}

#farm-testimonials p {
    margin: 2rem 1rem;
    line-height: 1.4em;
}

.pg-title {
    width: 70%;
    margin: auto; 
    color: #7A7C80;
    text-align: center;
    font-size: 14pt;
    height: auto;
    padding: 0 0 35px 0;
}

.article-list {
  width: 65%;
  margin: auto; 
  display: grid;
  grid-template-columns: repeat(1, minmax(320px, 1fr));
  padding: 2rem 0;
  grid-gap: 1rem;

}

.article-list article {
    background-color: #eee;
    margin: 0 0 20px 0;
    overflow: hidden;
}

.article-list article img {
    float: left;
    height: 150px;
    width: 180px;
    object-fit: contain;
    margin-right: 20px;
}

.ways-wrap {
    text-align: center;
    margin-bottom: 20px;
}

.ways {
    text-align: left;
    min-width: 320px;
}

.organisation {
    float: right;
    width: 35%;
    padding-top: 20vh;
    text-align: center;
}

.top-nav {
  overflow: hidden;
  margin: auto;
  text-align: center;
  width: 70%;
  border-style: solid;
  border-color: green;
  border-width: 3px 0;
}

.top-nav a {
  display: inline-block;
  text-align: center;
  padding: 20px 10px;
  text-decoration: none;
}

.top-nav a:hover {
  background-color: #eee;
  color: green;
  transition: 0.3s;
}

.top-nav .current {
    color: white;
    background-color: green;
    opacity: 0.3;
}

/*body .grid-container {
  text-align: center;
  
}*/

.grid-container {
  width: 80vw;
  margin: auto;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
  padding: 2rem 0;
  grid-gap: 1.5rem;
}

.grid-item {
    padding: 0 20px 10px 20px;
    background-color: #eee;
}

.grid-item img {
    height: 220px;
    width: 100%;
    object-fit: contain;
}

/*Set the fonts for inside each article box*/
.article-title {
    font-family: Tahoma, Geneva, sans-serif;
    font-size: 18pt;
    font-style: bolder;
}

article a {
    font-size: 1em;
    color: black
}

article a:hover {
  background-color: #fff;
  color: green;
  transition: 0.3s;
}

article p {
    overflow: hidden;
}

.pub-title {
    color: #545454;
    margin-top: 10px;
    margin-bottom: 10px;
    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
    font-size: 16pt;
    font-style: italic;
    font-weight: lighter;
}

/*For mobile phones: */
@media only screen and (max-width: 900px) {
   #about, .top-nav, header, footer, 
   .grid-container, .article-list, .pg-title, 
   #testimonials, #farm-testimonials {
    width: 100%;
  }

  #about {
    grid-template-columns: 100%;
  }
}

/*For iphones 6,7, and 8*/
@media only screen 
and (min-device-width : 375px) 
and (max-device-width : 667px) {
     #about, .top-nav, header, footer, 
   .grid-container, .article-list, .pg-title, 
   #testimonials, #farm-testimonials {
    width: 100%;
  }

  #about {
    grid-template-columns: 100%;
  }
}

